@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(as.data.frame,expressionset)
 export("created<-")
 export("description<-")
 export("label<-")
@@ -10,6 +11,7 @@ export(.get_exprs)
 export(.ini_expressionset_cli)
 export(.ini_expressionset_yml)
 export(.show_expressionset)
+export(as.data.frame)
 export(as_yaml)
 export(cells)
 export(check_that)
