@@ -1,7 +1,8 @@
 version 0.2.0
-- New object of class 'indicator'
+- new object of class 'indicator'
 - validation rules now support if-then-else syntax.
-- validaton rules may now contain embedded if-statements, e.g. A | (if (B) C)
+- validaton rules can now contain embedded if-statements, e.g. A | (if (B) C)
+- results of getter functions (e.g. 'labels') are now named.
 - Safer expression manipulation under the hood.
 
 
